--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -156,6 +156,7 @@
                             Entrepreneur, Visionaire, SpaceX, Tesla
                         </td> 
                         </tr>
+                        {% include "GENERAL.html" %}
                    </tbody>
                 </table>
             </div>
