--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -156,7 +156,7 @@
                             Entrepreneur, Visionaire, SpaceX, Tesla
                         </td> 
                         </tr>
-                        {% include "GENERAL.html" %}
+                        {% include "articles/Doporucene_veci_tabulky/GENERAL.html" %}
                    </tbody>
                 </table>
             </div>
