--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -140,22 +140,6 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                        <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td> 
-                        </tr>
                         {% include "articles/Doporucene_veci_tabulky/GENERAL.html" %}
                    </tbody>
                 </table>
@@ -190,20 +174,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Dominic Mann</td>
-                         <td>17 Anti-Procrastination Hacks</td>
-                         <td><a href="https://www.amazon.co.uk/17-Anti-Procrastination-Hacks-Overcome-Procrastination/dp/1519061080/ref=sr_1_fkmr2_1?s=books&ie=UTF8&qid=1495984141&sr=1-1-fkmr2&keywords=advanced+procrastination+hacks" target="_blank">Amazon link</a></td>
-                         <td>Self-Development, Life Hacks</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Dale Carnegie</td>
-                         <td>How to win friends and influence people</td>
-                         <td><a href="https://www.amazon.co.uk/d/Books/How-Win-Friends-Influence-People-Dale-Carnegie/0091906814" target="_blank">Amazon link</a></td>
-                         <td>Self-Development, Life skills</td>
-                      </tr>
+                      {% include "articles/Doporucene_veci_tabulky/READ.html" %}
                    </tbody>
                 </table>
             </div>
@@ -223,7 +194,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
-                <h4 class="modal-title">2nd title</h4>
+                <h4 class="modal-title">3rd title</h4>
             </div>
             <div class="modal-body">
                 <table class="table">
@@ -237,22 +208,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                         <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                      </tr>
+                      {% include "articles/Doporucene_veci_tabulky/PEOPLE.html" %}
                    </tbody>
                 </table>
             </div>
@@ -272,7 +228,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
-                <h4 class="modal-title">2nd title</h4>
+                <h4 class="modal-title">4th title</h4>
             </div>
             <div class="modal-body">
                 <table class="table">
@@ -286,22 +242,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                         <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                      </tr>
+                      {% include "articles/Doporucene_veci_tabulky/SOCIAL.html" %}
                    </tbody>
                 </table>
             </div>
@@ -321,7 +262,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
-                <h4 class="modal-title">2nd title</h4>
+                <h4 class="modal-title">5th title</h4>
             </div>
             <div class="modal-body">
                 <table class="table">
@@ -335,22 +276,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                         <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                      </tr>
+                      {% include "articles/Doporucene_veci_tabulky/SERVICE.html" %}
                    </tbody>
                 </table>
             </div>
@@ -370,7 +296,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
-                <h4 class="modal-title">2nd title</h4>
+                <h4 class="modal-title">6th title</h4>
             </div>
             <div class="modal-body">
                 <table class="table">
@@ -384,7 +310,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                        
+                        {% include "articles/Doporucene_veci_tabulky/FUN.html" %}
                    </tbody>
                 </table>
             </div>
