--- a/app/templates/articles/Doporucene_veci_tabulky/GENERAL.html
+++ b/app/templates/articles/Doporucene_veci_tabulky/GENERAL.html
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 <td>3</td>
-<td>Mimoškolu/td>
+<td>Mimoškolu</td>
 <td>Získej znalosti, které ti vysoká nedá</td>
 <td><a href="https://www.mimoskolu.cz/" target="_blank">Mimoškolu</a</td>
 <td>Self-Development</td>
