--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -114,8 +114,16 @@
                     Proto je i návyk následující akce tak efektivní. Začít je nejtěžší části celé úlohy. Jedna akce vede ke druhé a než si to uvědomíte, už se vezete na vlně setrvačnosti.
                     Proto si mnoho úspěšných vůdců a podnikatelů vyvinulo silně motivující a nabuzující ranní rituály. Tím že nastartují svůj den již ráno, vezou se následně na vlně setrvačnosti skrz celý den.
       <br/>
-      Stáváme se tím nad čím přemýšlíme. Where you focus goes, your energy flows.
+      Stáváme se tím nad čím přemýšlíme. 
      </p>
+     <blockquote>
+      <p>
+       Where you focus goes, your energy flows.
+      </p>
+      <small>
+       Anonymous
+      </small>
+     </blockquote>
     </div>
     <div class="col-md-6">
      <div class="row">
