--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -142,7 +142,7 @@
       To-Do List: znovu a lépe
      </h3>
      <p class="text-justify">
-      Většina úkolů, které si lidé píší do diářů dělá již automaticky vaší mysli peklo na zemi.
+      Většina úkolů, které si lidé píší do diářů dělá vaší mysli automaticky peklo na zemi.
                     Napíší si věci jako "Vyřídit daně" nebo "Měsíční zpráva". Jak učinit váš diář příjmnějším?
                     Uvědomte si, že v úkolníčcích se vyskytují věci, které vás buď přitahují (posezení s přáteli) nebo odpuzují (formuláře, povinnosti). Úlohy učiníte zajímavějšími tak, že je přetvoříte na akční a rázné. Místo "Psát diplomku" si zapište "Napsat odstavec o ...". Přece musíte uznat, že druhá varianta je přívětivější.
                     Eliminujte prokrastinaci soustředěním se pouze na malé úlohy, na vaši další akci. Učiňte je jednoduchými, snadnými a akčními. Opakujte a zjistíte, že získáte touženou setrvačnost.
@@ -175,9 +175,17 @@
                         Jakmile budete používat toto pravidlo delší dobu, zjistíte, že stíháte. Úlohy se vám nebudou hromadit do dvouhodinových pracovních bloků, které si koledují o to, aby jste místo nich prokrastinovali.
                         Pokud chcete jíst zdravě, vemte si ovoce a snězte jej, zabere to méně jak 2 minuty. Udělejte tak každý den a přistihnete se, že nahrazujete sodu za vodu a k jídlu si uděláte jako přílohu salát, sladkosti nahradíte ovocem. Podobně pokud si chcete navyknout denně číst, přečtěte si první stranu knihy. V rámci setrvačnosti si ani neuvědomíte, že máte celou kapitolu za sebou. Co třeba běhání? Není problém. Nasaďte si běžecké boty a jděte před dveře - to by vám mělo zabrat méně jak 2 minuty - no a když už tam jste, setrvačností si dáte 20 minut běhu a ještě si přidáte 30 dřepů.
                         Prokrastinace je téměř vždy vyřešena, když učiníte první krok. Největší překážkou je začít, tak proč si to nezjednodušit!?
-      <br/>
-      A journey of thousand miles must begin with a single step.
-      <br/>
+      <blockquote>
+      <p>
+       A journey of thousand miles must begin with a single step.
+      </p>
+      <small>
+       Lao-Tze
+      </small>
+      <cite>
+      Chinese philosopher
+      </cite>
+     </blockquote>
       Udělejte jeden klik, umyjte si jeden zub, snězte jedno jablko, napište prvních 5 slov článku. Jakmile začnete, jedno jak malá nebo nevýznamná akce se to zdála, "rozjedete" se. Jedna věc vede k druhé, nabudete setrvačnosti. Naschle prokrastinace. Ale ona se zase vrátí! Jakmile tak nastane, znovu užijte dvouminutové pravidlo, restartujte, jeďte znovu. V začátcích však toto berte s rezervou, mohli by jste dostat šok :D.
                         Udělejte jeden krok. Ten první, nejdůležitější. To je to, na čem záleží.
      </p>
@@ -222,7 +230,7 @@
                     Zadruhé, vyčleňte si čas (adekvátně malý), místo a přemýšlejte jak přesně danou aktivitu budete dělat.
                     Zatřetí, eliminujte vše ostatní. Mobil do režimu letadla, zablokujte určité stránky skrz aplikace, odstraňte rušivé elementy. Pokud můžete, odpojte internet, vypněte televizi. Během práce na počítači je nutkání k prokrastinaci obzvláště pokušující. Jakmile se úkol zdá nudným či obtížným, prokrastinování je jen záložku vedle. Učiňte tuto možnost obtížnou.
       <br/>
-      Pokud opravdu potřebujete používat internet, já osobně používám Go Fucking Work, díky kterému si zablokujete prokrastinující stránky, a dále Rescue Time zaznamenávající dobu, kterou jste strávili na různých stránkách a v programech.
+      Pokud opravdu potřebujete používat internet, já osobně používám <a href="https://gofuckingwork.com/" target="_blank">Go Fucking Work</a>, díky kterému si zablokujete prokrastinující stránky, a dále <a href="https://www.rescuetime.com/" target="_blank">Rescue Time</a> zaznamenávající dobu, kterou jste strávili na různých stránkách a v programech.
                     Pointa je takováto: Abyste opravdu překonali prokrastinaci a něco dělali, musíte se k tomu opravdu zavázat. Vyberte si čas a místo, odstraňte rušivé elementy a nedejte si šanci dělat něco jiného než to co právě musíte.
      </p>
     </div>
@@ -321,7 +329,7 @@
       Nějakým záhadným způsobem jsou studenti vysokých škol schopni zpracovat semestrální projekt za jediný den ( a noc). Beze srandy, jak to dělají? Termíny.
                     Nemůžeme před nimi utéct, není se kde skrýt, nejde je ovlivnit. Využijte je!
       <br/>
-      Vytvořte si vlastní na www.stickk.com. Vsaďte si na sebe, donuťte se pracovat na daném úkolu nebo přijdete o peníze. Dokonce se můžete vsadit, že peníze půjdou na charitu kterou nesnášíte. Podle mě skvělý nápad!
+      Vytvořte si vlastní na <a href="http://www.stickk.com/" target="_blank">Stickk</a>. Vsaďte si na sebe, donuťte se pracovat na daném úkolu nebo přijdete o peníze. Doporučuji se vsadit společně se známým a navzájem se kontrolovat. Dokonce se můžete vsadit, že peníze půjdou na charitu kterou nesnášíte. Podle mě skvělý nápad!
      </p>
     </div>
    </div>
@@ -448,7 +456,7 @@
         Když se střetáváme s nudnými, zlouhavými a nezáživnými, vyčerpávajícími a repetitivními činnostmi, nutkání k prokrastinaci se přikrade ke každému z nás. Toto nejsou činnosti, na které by jste měli vynaložit svou vůli a mentální energii, pokud máte více důležité a produktivní aktivity. Pak je mnohdy nejlepší volbou outsourcing.
                             Pro neznalé: Outsourcing je univerzální služba, kde zadáte svou úlohu a někdo jiný než vy ji za úplatu splní.
         <br/>
-        Dvě dobré stránky na to začít s outsourcingem jsou Upwork (https://upwork.com) a Fiverr (https://fiverr.com).
+        Dvě dobré stránky na to začít s outsourcingem jsou <a href="https://upwork.com" target="_blank">Upwork</a> a <a href="https://fiverr.com" target="_blank">Fiverr</a>.
                             V Upworku hledáte přímo lidi, kterým daný problém svěříte nebo přímo si pronajmete asistenty. Fiverr funguje jinak, a to tím způsobem, že platíte přímo vámi vybranou úlohu, kterou někdo udělá.
        </p>
       </div>
@@ -516,7 +524,7 @@
        10 minut práce + 2 minuty pauza. Zopakujte 5x a hodina práce je na světě. Pauzy vyeliminujte jakmile nejsou potřebné.
       </li>
       <li>
-       Dejte si ultimátum/uzavíračku. Vsaďte si na sebe, použijte pro to stickk.com, budete radši pracovat než tratit peníze.
+       Dejte si ultimátum/uzavíračku. Vsaďte si na sebe, použijte pro to Stickk, budete radši pracovat než tratit peníze.
       </li>
       <li>
        Udělané je lepší než perfektní. 1 &gt;&gt; 0. Prázdnou stránku nezeditujete, perfekci odložte stranou. Udělejte co můžete.
