--- a/app/templates/articles/Doporucene_veci_tabulky/FUN.html
+++ b/app/templates/articles/Doporucene_veci_tabulky/FUN.html
@@ -10,6 +10,6 @@
 <td>2</td>
 <td>Elon Musk</td>
 <td>Future is now</td>
-<td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+<td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a></td>
 <td>TEST</td>
 </tr>
